--- a/NieRChipHelperLibrary/NieRChipHelperLibrary.vcxproj
+++ b/NieRChipHelperLibrary/NieRChipHelperLibrary.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="Nier.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="reclass.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
@@ -198,6 +199,9 @@
   </ItemGroup>
   <ItemGroup>
     <MASM Include="autoDelete.asm" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="NieRChipHelperLibrary.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
