--- a/NieRChipHelperLibrary/NieRChipHelperLibrary.vcxproj.filters
+++ b/NieRChipHelperLibrary/NieRChipHelperLibrary.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="Mem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -130,5 +133,10 @@
     <MASM Include="autoDelete.asm">
       <Filter>asm</Filter>
     </MASM>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="NieRChipHelperLibrary.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
