--- a/NieRChipHelper/NieRChipHelper.vcxproj
+++ b/NieRChipHelper/NieRChipHelper.vcxproj
@@ -14,8 +14,9 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{3245e927-7569-4289-83b5-62feff23c1f1}</ProjectGuid>
-    <RootNamespace>NieRChipHelperLibrary</RootNamespace>
+    <RootNamespace>NieRChipHelper</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>NieRChipHelper</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
