--- a/NieRChipHelper/NieRChipHelper.vcxproj.filters
+++ b/NieRChipHelper/NieRChipHelper.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="fonts.h">
       <Filter>fonts</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -139,5 +142,10 @@
     <MASM Include="autoDelete.asm">
       <Filter>asm</Filter>
     </MASM>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="NieRChipHelper.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
