--- a/NieRChipHelper/NieRChipHelper.rc
+++ b/NieRChipHelper/NieRChipHelper.rc
@@ -67,6 +67,7 @@ BEGIN
     BEGIN
         BLOCK "000904b0"
         BEGIN
+            VALUE "FileDescription", "NieRChipHelper Mod"
             VALUE "FileVersion", "1.1.0.0"
             VALUE "LegalCopyright", "Copyright (C) 2021"
             VALUE "ProductName", "NieRChipHelper"
