fix: solutions configs

--- a/NieRChipHelper/NieRChipHelper.vcxproj
+++ b/NieRChipHelper/NieRChipHelper.vcxproj
@@ -47,15 +47,21 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\NieRChipHelper\</OutDir>
+    <IntDir>$(Platform)\$(Configuration)\NieRChipHelper\</IntDir>
+    <TargetName>NieRChipHelper</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\NieRChipHelper\</OutDir>
+    <IntDir>$(Platform)\$(Configuration)\NieRChipHelper\</IntDir>
+    <TargetName>NieRChipHelper</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;NIERCHIPHELPERLIBRARY_EXPORTS;_WINDOWS;_USRDLL;DETOURS_INTERNAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;NIERCHIPHELPER_EXPORTS;_WINDOWS;_USRDLL;DETOURS_INTERNAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -75,7 +81,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;NIERCHIPHELPERLIBRARY_EXPORTS;_WINDOWS;_USRDLL;DETOURS_INTERNAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;NIERCHIPHELPER_EXPORTS;_WINDOWS;_USRDLL;DETOURS_INTERNAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
